--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "otus-hw-22-idem",
+  "name": "application",
   "version": "0.0.1",
-  "description": "OtusHW22Idem",
+  "description": "idempotency",
   "keywords": [
     "loopback-application",
     "loopback"
@@ -14,17 +14,15 @@
   "scripts": {
     "build": "lb-tsc",
     "build:watch": "lb-tsc --watch",
-    "lint": "npm run eslint && npm run prettier:check",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "lint": "npm run prettier:check",
+    "lint:fix": "npm run prettier:fix",
     "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
     "prettier:check": "npm run prettier:cli -- -l",
     "prettier:fix": "npm run prettier:cli -- --write",
-    "eslint": "lb-eslint --report-unused-disable-directives .",
-    "eslint:fix": "npm run eslint -- --fix",
     "pretest": "npm run rebuild",
     "posttest": "npm run lint",
-    "docker:build": "docker build -t otus-hw-22-idem .",
-    "docker:run": "docker run -p 3000:3000 -d otus-hw-22-idem",
+    "docker:build": "docker build -t application .",
+    "docker:run": "docker run -p 3000:3000 -d application",
     "premigrate": "npm run build",
     "migrate": "node ./dist/migrate",
     "preopenapi-spec": "npm run build",
@@ -47,21 +45,18 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "6.1.3",
-    "@loopback/core": "5.1.3",
-    "@loopback/repository": "6.1.3",
-    "@loopback/rest": "13.1.3",
-    "@loopback/rest-explorer": "6.1.3",
-    "@loopback/service-proxy": "6.1.3",
+    "@loopback/boot": "^6.1.3",
+    "@loopback/core": "^5.1.3",
+    "@loopback/repository": "^6.1.4",
+    "@loopback/rest": "^13.1.3",
+    "@loopback/rest-explorer": "^6.1.3",
     "loopback-connector-openapi": "^6.2.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^10.1.3",
-    "@loopback/eslint-config": "^14.0.4",
     "@loopback/testlab": "^6.1.3",
     "@types/node": "^16.18.50",
-    "eslint": "^8.48.0",
     "source-map-support": "^0.5.21",
     "typescript": "~5.2.2"
   }
